// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it returns the expected markup 1`] = `
"
        <div class=\\"bemagic-page__section js-page-section background\\" data-class=\\"block\\">
            <div class=\\"block\\">The quick brown fox jumps over the lazy dog</div>
            
            
                    <div    class=\\"block pseudo-hover\\">
                        hover
                    </div>
                
            
                    <div    class=\\"block pseudo-hover is-dimmed\\">
                        dimmed:hover
                    </div>
                
        </div>
    "
`;

exports[`it works for components without states 1`] = `
"
        <div class=\\"bemagic-page__section js-page-section background\\" data-class=\\"block\\">
            <div class=\\"block\\">The quick brown fox jumps over the lazy dog</div>
            
            
            
        </div>
    "
`;
